5 March 2007
+ Changed control panel icon

Version 1.4.0
------------------------------------------------------------------
23 February 2007
+ Fixed bug with navigation links when viewing single event.

20 February 2007
+ Uninstall clears calendar convert status.
+ Added new phrases to translation.

19 February 2007
+ Reduced translate functions
+ Removed single quotes from default integers in sql file.

2 February 2007
+ Bug #1648965. Clicking Day or Week from grid view pulls correct day
+ Changed "Today" link to view appropiate description to prevent
  confusion
+ Changed time defaults to %p to work with more installs
+ If start date is greater than end date, the event will be saved to
  the save day.
+ Bug #1648963. Fixed mini month not showing days with events.
+ Updated files: conf/config.php
+ Made event count linkable in grid view

29 January 2007
+ Labeled some permissions "unrestricted only"
+ Added permissions checks for editing and deleting
+ Created checkPermissions function in schedule class to simplify code
+ Removed commented legacy code from Schedule.php
+ Added missing suggestion tables to install and uninstall
+ Fixed caching logic

25 January 2007
+ Fixed default schedule loading in Calendar class
+ Fixed inability to create more than one schedule
+ Added option to disable month view caching
+ Caching now works on public calendars only.
+ Updated files: templates/admin/settings.tpl

Version 1.3.0
------------------------------------------------------------------
13 December 2006
+ Updated files : templates/admin/forms/edit_event.tpl
                  templates/view/day
                  templates/style.css
                  templates/user_main.tpl
                  templates/admin/approval.tpl
                  conf/config.php
+ Added ability for users to make event suggestions
+ Fixed some javascript vs. non-js issues in event creation.

28 November 2006
+ Changed default public calendar to -1 to prevent error messages.

Version 1.2.2