@@ -6,7 +6,7 @@
    */
 
 $proper_name  = 'Calendar';
-$version      = '1.4.0';
+$version      = '1.4.1';
 $version_http = 'http://phpwebsite.appstate.edu/downloads/modules/calendar/check.xml';
 $import_sql   = true;
 ?>
